# project3

./: .gitignore  Dockerfile  README.md  check.sh  compose.yaml  main.py  pyproject.toml  test.sh
ui/: check.sh  film.html  film.jsx  index.html  main.js  main.jsx  package-lock.json  package.json
