[tool.poetry]
name = "project3"
version = "0.1.0"
description = ""
authors = ["Maxwell Chalmers <mchalme2@unca.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"

[tool.poetry.dev-dependencies]
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
